home page static

--- a/design/email/welcome_email.html
+++ b/design/email/welcome_email.html
@@ -1051,7 +1051,7 @@
                     </div>
                     <div class="welcome_btn_col">
                       <button>
-                        Get started <img src="images/right_arrow.svg" alt="" />
+                        Get started <img src="<?php echo get_template_directory_uri();?>/assets/images/right_arrow.svg" alt="" />
                       </button>
                       <div class="welcome_btn_text__col">
                         <h3><span>Get 96% Off</span> on premium mockups</h3>
@@ -1062,32 +1062,32 @@
                       <h2>Free Mockups</h2>
                       <div class="card_container">
                         <div class="card_item">
-                          <img src="images/demo_img.svg" alt="" />
+                          <img src="<?php echo get_template_directory_uri();?>/assets/images/demo_img.svg" alt="" />
                         </div>
 
                         <div class="card_item">
-                          <img src="images/demo_img.svg" alt="" />
+                          <img src="<?php echo get_template_directory_uri();?>/assets/images/demo_img.svg" alt="" />
                         </div>
                         <div class="card_item">
-                          <img src="images/demo_img.svg" alt="" />
+                          <img src="<?php echo get_template_directory_uri();?>/assets/images/demo_img.svg" alt="" />
                         </div>
                         <div class="card_item">
-                          <img src="images/demo_img.svg" alt="" />
+                          <img src="<?php echo get_template_directory_uri();?>/assets/images/demo_img.svg" alt="" />
                         </div>
                         <div class="card_item">
-                          <img src="images/demo_img.svg" alt="" />
+                          <img src="<?php echo get_template_directory_uri();?>/assets/images/demo_img.svg" alt="" />
                         </div>
                         <div class="card_item">
-                          <img src="images/demo_img.svg" alt="" />
+                          <img src="<?php echo get_template_directory_uri();?>/assets/images/demo_img.svg" alt="" />
                         </div>
                         <div class="card_item">
-                          <img src="images/demo_img.svg" alt="" />
+                          <img src="<?php echo get_template_directory_uri();?>/assets/images/demo_img.svg" alt="" />
                         </div>
                         <div class="card_item">
-                          <img src="images/demo_img.svg" alt="" />
+                          <img src="<?php echo get_template_directory_uri();?>/assets/images/demo_img.svg" alt="" />
                         </div>
                         <div class="card_item">
-                          <img src="images/demo_img.svg" alt="" />
+                          <img src="<?php echo get_template_directory_uri();?>/assets/images/demo_img.svg" alt="" />
                         </div>
                       </div>
                     </div>
